--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -465,7 +465,11 @@
 {% endblock %}
 
 {% block extra_js %}
-<script src="{% static 'js/infinite-scroll.js' %}?v=8"></script>
+<script>
+// User authentication status
+const userIsAuthenticated = {{ user.is_authenticated|yesno:"true,false" }};
+</script>
+<script src="{% static 'js/infinite-scroll.js' %}?v=9"></script>
 
 <script>
 // Переводы для JavaScript
