--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -474,26 +474,26 @@ const userIsAuthenticated = {{ user.is_authenticated|yesno:"true,false" }};
 <script>
 // Переводы для JavaScript
 const translations = {
-    addToList: "{% trans 'Добавить в список' | escapejs %}",
-    loading: "{% trans 'Загрузка...' | escapejs %}",
-    createNewList: "{% trans 'Создать новый список' | escapejs %}",
-    listName: "{% trans 'Название списка' | escapejs %}",
-    description: "{% trans 'Описание' | escapejs %}",
-    descriptionOptional: "{% trans 'Описание (опционально)' | escapejs %}",
-    create: "{% trans 'Создать' | escapejs %}",
-    cancel: "{% trans 'Отмена' | escapejs %}",
-    enterListName: "{% trans 'Введите название списка' | escapejs %}",
-    listCreated: "{% trans 'Список создан!' | escapejs %}",
-    errorCreatingList: "{% trans 'Ошибка создания списка' | escapejs %}",
-    errorOccurred: "{% trans 'Произошла ошибка' | escapejs %}",
-    removedFromFavorites: "{% trans 'Удалено из избранного' | escapejs %}",
-    addedToFavorites: "{% trans 'Добавлено в избранное! Войдите, чтобы сохранить навсегда.' | escapejs %}",
-    noListsYet: "{% trans 'У вас пока нет списков' | escapejs %}",
-    createFirstList: "{% trans 'Создайте свой первый список избранного' | escapejs %}",
-    errorLoadingLists: "{% trans 'Ошибка загрузки списков' | escapejs %}",
-    products: "{% trans 'товаров' | escapejs %}",
-    listNamePlaceholder: "{% trans 'Например: Свадебные украшения' | escapejs %}",
-    descriptionPlaceholder: "{% trans 'Описание списка...' | escapejs %}"
+    addToList: "{% trans 'Добавить в список' %}",
+    loading: "{% trans 'Загрузка...' %}",
+    createNewList: "{% trans 'Создать новый список' %}",
+    listName: "{% trans 'Название списка' %}",
+    description: "{% trans 'Описание' %}",
+    descriptionOptional: "{% trans 'Описание (опционально)' %}",
+    create: "{% trans 'Создать' %}",
+    cancel: "{% trans 'Отмена' %}",
+    enterListName: "{% trans 'Введите название списка' %}",
+    listCreated: "{% trans 'Список создан!' %}",
+    errorCreatingList: "{% trans 'Ошибка создания списка' %}",
+    errorOccurred: "{% trans 'Произошла ошибка' %}",
+    removedFromFavorites: "{% trans 'Удалено из избранного' %}",
+    addedToFavorites: "{% trans 'Добавлено в избранное! Войдите, чтобы сохранить навсегда.' %}",
+    noListsYet: "{% trans 'У вас пока нет списков' %}",
+    createFirstList: "{% trans 'Создайте свой первый список избранного' %}",
+    errorLoadingLists: "{% trans 'Ошибка загрузки списков' %}",
+    products: "{% trans 'товаров' %}",
+    listNamePlaceholder: "{% trans 'Например: Свадебные украшения' %}",
+    descriptionPlaceholder: "{% trans 'Описание списка...' %}"
 };
 
 let currentArticle = '';
